<resources>
    <string name="tab_device_hint">设备</string>
    <string name="tab_report_hint">报告</string>
    <string name="tab_consultant_hint">咨询</string>
    <string name="tab_me_hint">我的</string>
    <string name="connect_device_hint">连接设备</string>
    <string name="device_connect_title_hint">设备连接</string>
    <string name="switch_bluetooth_advice_hint">开启连接设备按钮以搜索附近可用设备,此操作会开启手机的蓝牙功能.</string>
    <string name="no_adapter_hint">手机蓝牙未开启</string>
    <string name="select_device_hint">选择设备</string>
    <string name="monitor_name_hint">监测仪:</string>
    <string name="sleeping_name_hint">速眠仪:</string>
    <string name="ring_power_less_hint">%s电量不足%d%s,请及时充电</string>
    <string name="monitor">监测仪</string>
    <string name="speed_sleeper">速眠仪</string>
    <string name="none_connected_state_hint">未连接</string>
    <string name="connecting_state_hint">连接中</string>
    <string name="connected_state_hint">已连接</string>
    <string name="disconnected_state_hint">已断开</string>
    <string name="working_state_hint">工作中</string>
    <string name="battery_indicator_hint">电量: </string>
    <string name="switch_hint">档位调节:</string>
    <string name="request_permission_hint">当前 App 未获取蓝牙权限，是否获取?</string>
    <string name="request_write_external_storage_permission_hint">当前 App 没有读写文件权限，将无法同步数据，是否获取?</string>
    <string name="device_connected_failed_toast">蓝牙连接失败,可以尝试关闭手机蓝牙后,再次打开蓝牙连接</string>
    <string name="device_connected_failed_hint">蓝牙连接失败</string>
    <string name="device_disconnected_success_hint">连接已断开</string>
    <string name="device_connected_success_hint">连接成功</string>
    <string name="device_disconnected_state_hint">当前设备未连接,无法检测固件版本</string>
    <string name="device_re_connecting_state_hint">正在重新连接</string>
    <string name="sync_ing_device_data_hint">正在同步数据</string>
    <string name="sync_ing_sleep_data_hint">正在同步睡眠数据</string>
    <string name="device_connecting_hint">设备正在连接中</string>
    <string name="sync_device_data_success_hint">数据同步已完成</string>
    <string name="device_disconnect_hint">监测仪未连接,点击此处尝试连接</string>
    <string name="device_battery_less_hint">设备电量不足,请及时充电</string>
    <string name="scan_finished_hint">蓝牙扫描已完成</string>
    <string name="scanning_hint">正在扫描蓝牙设备</string>
    <string name="unbinding_device">设备解绑中</string>
    <string name="unbind_device_success_hint">设备已解绑,您可以扫描新的设备啦</string>
    <string name="device_connecting_error_hint">有设备正在连接中…请稍后再试</string>
    <string name="switch_ing_power_hint">正在调节速眠仪档位中</string>
    <string name="switch_power_success_hint">速眠仪档位调节成功</string>
    <string name="switch_power_failed_hint">速眠仪档位调节失败，请重试</string>
    <string name="cancel_hint">取消</string>
    <string name="ok_hint">确认</string>
    <string name="ensure_hint">确定</string>
    <string name="login_hint">登录</string>
    <string name="register_hint">注册</string>
    <string name="login_mobile_hint">请输入手机号码</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="forget_pwd_hint">忘记密码?</string>
    <string name="forget_pwd_title_hint">忘记密码</string>
    <string name="mobile_error_hint">请输入正确的手机号码</string>
    <string name="captcha_error_hint">请输入正确的验证码</string>
    <string name="pwd_error_hint">密码格式不对,请输入正确的密码</string>
    <string name="input_captcha_hint">输入验证码</string>
    <string name="captcha_hint">发送验证码</string>
    <string name="bind_mobile">绑定手机</string>
    <string name="bind_set_pwd">请设置密码</string>
    <string name="bind">绑定</string>
    <string name="tip_double_click_exit_hint">再按一次退出APP</string>
    <string name="register_success_hint">恭喜,您的账号注册成功啦</string>
    <string name="set_pwd_success_hint">您的密码已重置成功</string>
    <string name="login_success_hint">您的账户登录成功啦</string>
    <string name="logout_success_hint">您的账户已安全退出</string>
    <string name="logout_failed_hint">您的账户未安全退出，请重试</string>
    <string name="in_login_hint">正在登录中</string>
    <string name="user_none_default_hint">未设置</string>
    <string name="user_none_default_select_hint">请选择</string>
    <string name="user_info_hint">个人信息</string>
    <string name="user_nickname_hint">昵称</string>
    <string name="user_mobile_hint">手机</string>
    <string name="user_address_hint">地区</string>
    <string name="user_sex_hint">性别</string>
    <string name="user_birthday_hint">出生年月</string>
    <string name="user_height_hint">身高</string>
    <string name="user_weight_hint">体重</string>
    <string name="gender_male_hint">男</string>
    <string name="gender_female_hint">女</string>
    <string name="gender_secrecy_hint">保密</string>
    <string name="refresh_user_info_ing_hint">正在更新用户信息</string>
    <string name="error_network_hint">网络不给力,请检查网络设置&#8230;</string>
    <string name="error_request_failed_hint">网络请求失败,请重试&#8230;</string>
    <string name="error_token_past_hint">token已失效,请重新登录</string>
    <string name="ok_captcha_hint">验证码已发送成功,请注意查收</string>
    <string name="error_captcha_failed_hint">验证码获取失败,请60s后重新获取</string>
    <string name="avatar_hint">头像</string>
    <string name="tel_me_hint">联系我们</string>
    <string name="setting_hint">设置</string>
    <string name="user_info_center">个人信息</string>
    <string name="msg_notice_hint">我的消息</string>
    <string name="sleepy_notice_hint">睡眠提醒</string>
    <string name="firmware_update_notice_hint">版本升级</string>
    <string name="sleepy_notice_state_off_hint">未开启</string>
    <string name="unbind_device_hint">确定解除当前绑定的设备?</string>
    <string name="unbind_text_hint">解除绑定</string>
    <string name="day_hint">日</string>
    <string name="week_hint">周</string>
    <string name="month_hint">月</string>
    <string name="day_sleep_hour_count">睡眠时长</string>
    <string name="day_sleep_quality_hint">睡眠质量</string>
    <string name="day_sleep_deep_hint">深层睡眠</string>
    <string name="day_sleep_light_hint">浅层睡眠</string>
    <string name="day_sleep_sober_hint">清醒时长</string>
    <string name="day_sleep_eog_hint">眼动时长</string>
    <string name="week_sleep_duration">周睡眠总时长</string>
    <string name="week_sleep_average_duration">日均睡眠时长</string>
    <string name="week_sleep_deep_average_duration">日均深睡时长</string>
    <string name="week_sleep_light_average_duration">日均浅睡时长</string>
    <string name="week_sleep_sober_average_duration">日均清醒睡时长</string>
    <string name="week_sleep_night_awake_average_duration">日均夜醒时长</string>
    <string name="month_sleep_duration">月睡眠总时长</string>
    <string name="sleep_deep_hint">深睡</string>
    <string name="sleep_light_hint">浅睡</string>
    <string name="sleep_sober_hint">清醒</string>
    <string name="sleep_eog_hint">眼动</string>
    <string name="sleep_night_awake_duration_hint">夜醒时长</string>
    <string-array name="label_text">
        <item>清醒</item>
        
        <item>浅睡</item>
        <item>深睡</item>
    </string-array>
    <string name="fall_sleep_time_hint">入睡时间</string>
    <string name="today_hint">日报告</string>
    <string name="seven_day_hint">周报告</string>
    <string name="thirty_day_hint">月报告</string>
    <string name="hour_hint">小时</string>
    <string name="min_hint">分</string>
    <string name="zero_hint">0</string>
    <string name="today_sleep_duration_hint">最新睡眠时长</string>
    <string name="wake_up_time_hint">睡醒时间</string>
    <string name="sober_sleep_duration_hint">清醒时长</string>
    <string name="deep_sleep_duration_hint">深睡时长</string>
    <string name="light_sleep_duration_hint">浅睡时长</string>
    <string name="none_duration_hint">--</string>
    <string name="short_none_duration_hint">--</string>
    <string name="compare_week_hint">同比上周</string>
    <string name="compare_month_hint">同比上月</string>
    <string name="minute_hint">分钟</string>
    <string name="sleep_advice_hint">影响因素及建议</string>
    <string name="sleep_data_less_hint">睡眠数据不足</string>
    <string name="sleep_advice_cancel">知道了</string>
    <string name="sleep_note_advice_hint">建议</string>
    <string name="sleep_advice_explain">解释</string>
    <string name="sleep_advice_element">因素</string>
    <string name="none_sleep_hint">当前没有更多睡眠数据</string>
    <string name="now_none_have_sleep_data">暂无睡眠记录</string>
    <string-array name="reminder_hour">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>
    <string-array name="reminder_min">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>
    <string name="reminder_add_success_hint">您睡眠提醒设置成功啦</string>
    <string name="setting_about_me_hint">关于我们</string>
    <string name="setting_modify_pwd_hint">修改密码</string>
    <string name="setting_reset_pwd">重置密码</string>
    <string name="setting_logout_hint">退出登录</string>
    <string name="setting_new_pwd_hint">请设置新密码</string>
    <string name="setting_re_set_new_pwd_hint">再次输入新密码</string>
    <string name="setting_save_hint">保存</string>
    <string name="setting_set_old_pwd_hint">请输入旧密码</string>
    <string name="setting_set_pwd_success_hint">恭喜您,密码修改成功啦</string>
    <string name="call_me_hint">即将拨打客服电话</string>
    <string name="tel_hint">400–878–9088</string>
    <string name="logout_title_hint">退出后不会删除任何历史数据,下次登录依然可以使用此账号.</string>
    <string name="firmware_note_hint">版本已是最新版本</string>
    <string name="current_version_hint">当前版本: %s</string>
    <string name="firmware_download_hint">下载</string>
    <string name="not_bad">不太好</string>
    <string name="general">一般般</string>
    <string name="good">还可以</string>
    <string name="very_good">好极了</string>
    <string name="turn_on_snoop_mode">开启监测模式</string>
    <string name="wechat_login">微信登录</string>
    <string name="register_rule_one">注册即代表同意</string>
    <string name="register_rule_two"><u>速眠用户协议</u></string>
    <string name="register_rule_three">及</string>
    <string name="register_rule_four"><u>速眠隐私政策</u></string>
    <string name="unbind_social_title">解绑后,你将无法使用%s帐号登陆速眠</string>
    <string name="unbind">解绑</string>
    <string name="pull_down_sync_sleep_data">下拉更新睡眠数</string>
    <string name="guide_step_left">左滑查看上一条</string>
    <string name="guide_step_right">右滑查看下一条</string>
    <string name="guide_step_two">打开日历，快速查看某一天的睡眠数据</string>
    <string name="go_next_step">下一条</string>
    <string name="synchronize">同步</string>
</resources>