<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/space_16"
    android:layout_marginTop="@dimen/space_16"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register_rule_one"
        android:textColor="@color/general_color"
        android:textSize="@dimen/font_12" />

    <TextView
        android:id="@+id/tv_rule_user_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_3"
        android:layout_marginStart="@dimen/space_6"
        android:autoLink="web"
        android:gravity="center"
        android:text="@string/register_rule_two"
        android:textColor="@color/bt_hole_color"
        android:textSize="@dimen/font_14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register_rule_three"
        android:textColor="@color/general_color"
        android:textSize="@dimen/font_12" />

    <TextView
        android:id="@+id/tv_privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_3"
        android:layout_marginStart="@dimen/space_6"
        android:gravity="center"
        android:text="@string/register_rule_four"
        android:textColor="@color/bt_hole_color"
        android:textSize="@dimen/font_14" />

</LinearLayout>