<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/space_20"
    android:layout_marginEnd="@dimen/space_20"
    android:layout_marginStart="@dimen/space_20"
    android:layout_marginTop="@dimen/space_14"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_bad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bg_material_ripple"
        android:drawablePadding="@dimen/space_4"
        android:drawableTop="@mipmap/ic_report_bad"
        android:gravity="center"
        android:text="@string/not_bad" />

    <TextView
        android:id="@+id/tv_general"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bg_material_ripple"
        android:drawablePadding="@dimen/space_4"
        android:drawableTop="@mipmap/ic_report_general"
        android:gravity="center"
        android:text="@string/general" />

    <TextView
        android:id="@+id/tv_good"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bg_material_ripple"
        android:drawablePadding="@dimen/space_4"
        android:drawableTop="@mipmap/ic_report_good"
        android:gravity="center"
        android:text="@string/good" />

    <TextView
        android:id="@+id/tv_very_good"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bg_material_ripple"
        android:drawablePadding="@dimen/space_4"
        android:drawableTop="@mipmap/ic_report_very"
        android:gravity="center"
        android:text="@string/very_good" />

</LinearLayout>