<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="@dimen/space_30"
        android:layout_marginTop="@dimen/space_8"
        android:background="@drawable/shape_device_operation_popup_bg"
        android:gravity="center"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tv_turn_monitor"
            style="@style/DeviceOperationPopupText"
            android:text="@string/turn_on_snoop_mode" />

        <View
            android:id="@+id/v_divider_1"
            style="@style/DeviceOperationPopupDivider" />

        <TextView
            android:id="@+id/tv_synchronize"
            style="@style/DeviceOperationPopupText"
            android:text="@string/synchronize" />

        <View
            android:id="@+id/v_divider_2"
            style="@style/DeviceOperationPopupDivider" />

        <TextView
            android:id="@+id/tv_unbind"
            style="@style/DeviceOperationPopupText"
            android:text="@string/unbind" />
    </LinearLayout>
</FrameLayout>