<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <com.sumian.app.widget.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        app:text="@string/firmware_update_notice_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_upgrade"
            android:layout_width="@dimen/space_96"
            android:layout_height="@dimen/space_96"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_80"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            app:srcCompat="@mipmap/ic_upgrade_icon_newest" />

        <TextView
            android:id="@+id/tv_version_latest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_32"
            android:gravity="center"
            android:text="@string/firmware_note_hint"
            android:textSize="@dimen/font_16" />

        <TextView
            android:id="@+id/tv_version_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_8"
            android:gravity="center"
            android:text="@string/current_version_hint"
            android:textSize="@dimen/font_16" />

        <Button
            android:id="@+id/bt_download"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_56"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/space_32"
            android:layout_marginRight="@dimen/space_32"
            android:layout_marginTop="@dimen/space_100"
            android:background="@drawable/bt_circle_bg"
            android:gravity="center"
            android:text="@string/firmware_download_hint"
            android:textColor="@color/white"
            android:textSize="@dimen/font_20"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>

</LinearLayout>